--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,10 +4,9 @@
   }
 
   .navbarPoke {
-    bottom: 400px;
+    bottom: 150px;
     right: 30px;
     width: 100vw;
-    height: 5rem;
     background-color: #313852;
   }
 
